# sdkwork-prompts

./: .env.postgres.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  pnpm-workspace.yaml  sdkwork.app.config.json  start-server.bat  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.sdkwork/: .gitignore  README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/: authority-manifest.json
apps/: README.md
apps/sdkwork-prompts-pc/: README.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
configs/: sdkwork-api-cloud-gateway.prompts.development.toml  sdkwork-api-cloud-gateway.prompts.production.toml
configs/local/: .env.example  README.md
configs/production/: .env.production.example  README.md
configs/test/: README.md
configs/topology/: cloud.development.env  cloud.production.env  cloud.split-services.development.env  cloud.split-services.production.env  (+5 more)
crates/sdkwork-api-prompts-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-prompts-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-prompts-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-prompts-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-api-prompts-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-api-prompts-standalone-gateway/src/: context.rs  iam.rs  lib.rs  main.rs
crates/sdkwork-api-prompts-standalone-gateway/src/routes/: ai_prompts.rs  mod.rs
crates/sdkwork-intelligence-prompts-ai-contract/: Cargo.toml
crates/sdkwork-intelligence-prompts-ai-contract/src/: commands.rs  domain.rs  error.rs  lib.rs  ports.rs
crates/sdkwork-intelligence-prompts-ai-repository-sqlx/: Cargo.toml
crates/sdkwork-intelligence-prompts-ai-repository-sqlx/src/: agent_template_store.rs  lib.rs  prompt_ai_store.rs  stable_id.rs
crates/sdkwork-intelligence-prompts-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-intelligence-prompts-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-prompts-repository-sqlx/src/: bootstrap.rs  lib.rs  repo_impl.rs  schema.rs
crates/sdkwork-intelligence-prompts-service/: Cargo.toml  README.md
crates/sdkwork-intelligence-prompts-service/specs/: README.md  component.spec.json
crates/sdkwork-intelligence-prompts-service/src/: error.rs  lib.rs  value_objects.rs
crates/sdkwork-intelligence-prompts-service/src/application/: integration_hooks.rs  mod.rs
crates/sdkwork-intelligence-prompts-service/src/domain/: commands.rs  events.rs  mod.rs  models.rs  results.rs
crates/sdkwork-intelligence-prompts-service/src/integration/: drive.rs  mod.rs  notifications.rs  search.rs
crates/sdkwork-intelligence-prompts-service/src/ports/: repository.rs
crates/sdkwork-prompts-api-server/: Cargo.toml  README.md
crates/sdkwork-prompts-api-server/specs/: README.md  component.spec.json
crates/sdkwork-prompts-api-server/src/: auth.rs  context.rs  dto.rs  handlers.rs  iam.rs  infra_router.rs  lib.rs  main.rs  middleware.rs
crates/sdkwork-prompts-api-server/src/routes/: ai_prompts.rs  app.rs  backend.rs  mod.rs  open.rs
crates/sdkwork-prompts-database-host/: Cargo.toml
crates/sdkwork-prompts-database-host/src/: lib.rs
crates/sdkwork-prompts-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-prompts-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-prompts-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-prompts-service-host/: Cargo.toml  README.md
crates/sdkwork-prompts-service-host/specs/: README.md  component.spec.json
crates/sdkwork-prompts-service-host/src/: lib.rs  ports.rs
crates/sdkwork-prompts-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-prompts-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-prompts-standalone-gateway/src/: auth.rs  context.rs  dto.rs  iam.rs  main.rs  middleware.rs  response.rs
crates/sdkwork-prompts-standalone-gateway/src/routes/: ai_app_agent_templates.rs  ai_app_prompts.rs  ai_prompts.rs  open.rs
crates/sdkwork-prompts-web-context/: Cargo.toml
crates/sdkwork-prompts-web-context/specs/: README.md  component.spec.json
crates/sdkwork-prompts-web-context/src/: auth.rs  iam.rs  lib.rs  response.rs
crates/sdkwork-router-prompts-open-api/: Cargo.toml  README.md
crates/sdkwork-router-prompts-open-api/specs/: README.md  component.spec.json
crates/sdkwork-router-prompts-open-api/src/: http_route_manifest.rs  lib.rs  manifest.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-prompts-open-api/src/mapper/: mod.rs  request.rs
crates/sdkwork-router-prompts-open-api/tests/: open_route_manifest.rs
crates/sdkwork-routes-prompts-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-prompts-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-prompts-app-api/src/: agent_templates.rs  error.rs  lib.rs  manifest.rs  prompts.rs
crates/sdkwork-routes-prompts-app-api/src/mapper/: problem.rs  request.rs
crates/sdkwork-routes-prompts-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-prompts-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-prompts-backend-api/src/: handlers.rs  lib.rs  manifest.rs  paths.rs  prompts.rs
crates/sdkwork-routes-prompts-backend-api/src/mapper/: request.rs  response.rs
database/: README.md  database.manifest.json
docs/: INDEX.yaml  README.md  implementation-plan.md  prompts-api-design.md  prompts-architecture.md  prompts-database-design.md  prompts-integration-roadmap.md
etc/: sdkwork-api-cloud-gateway.prompts.development.toml  sdkwork-api-cloud-gateway.prompts.production.toml
examples/: README.md
jobs/: README.md
plugins/: README.md
sdks/: README.md
specs/: README.md  component.spec.json  iam.module.manifest.json  prompts-ai-database.schema.yaml  prompts-database.schema.yaml  topology.spec.json
tools/: check_sdkwork_prompts_architecture_alignment.mjs  ensure-workspace-deps.mjs
(+203 files in other folders)
