[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-prompts-assembly",
    "crates/sdkwork-api-prompts-assembly",
    "crates/sdkwork-intelligence-prompts-ai-contract",
    "crates/sdkwork-intelligence-prompts-ai-repository-sqlx",
    "crates/sdkwork-prompts-database-host",
    "crates/sdkwork-api-prompts-standalone-gateway",
    "crates/sdkwork-prompts-service-host",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
sdkwork-database-ops-http = { path = "../sdkwork-database/crates/sdkwork-database-ops-http" }
sdkwork-iam-context-service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-database-ops = { path = "../sdkwork-database/crates/sdkwork-database-ops" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-id = { path = "../sdkwork-database/crates/sdkwork-database-id", package = "sdkwork-database-id" }
axum = "0.8"
axum-extra = "0.10"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
sdkwork-intelligence-prompts-ai-contract = { path = "crates/sdkwork-intelligence-prompts-ai-contract" }
sdkwork-intelligence-prompts-ai-repository-sqlx = { path = "crates/sdkwork-intelligence-prompts-ai-repository-sqlx" }
sdkwork-prompts-database-host = { path = "crates/sdkwork-prompts-database-host" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
