[package]
name = "sdkwork-api-prompts-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-prompts application HTTP plane."

[lib]
name = "sdkwork_api_prompts_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
sdkwork-prompts-service-host.workspace = true
sdkwork-prompts-web-context.workspace = true
sdkwork-database-ops-http.workspace = true
sdkwork-web-bootstrap.workspace = true
tracing.workspace = true
sdkwork-routes-prompts-app-api.workspace = true
sdkwork-routes-prompts-backend-api.workspace = true
sdkwork-routes-prompts-open-api.workspace = true
