[package]
name = "sdkwork-api-prompts-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-prompts-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork-api-prompts-assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap = { workspace = true }
sdkwork-utils-rust = { workspace = true }
