[package]
name = "sdkwork-intelligence-prompts-ai-contract"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Prompt AI domain ports and DTOs for sdkwork-kernel and external consumers"

[lib]
name = "sdkwork_intelligence_prompts_ai_contract"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
