[package]
name = "sdkwork-intelligence-prompts-ai-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-intelligence-prompts-ai-contract = { path = "../sdkwork-intelligence-prompts-ai-contract" }
sdkwork-id-core = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
async-trait = { workspace = true }
chrono = { workspace = true }
