[package]
name = "sdkwork-intelligence-prompts-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sdkwork-intelligence-prompts-service = { path = "../sdkwork-intelligence-prompts-service" }
sdkwork-prompts-database-host = { workspace = true }
sdkwork-id-core = { workspace = true }
sdkwork-database-config = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
dotenvy = "0.15"
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "json", "bigdecimal"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
md-5 = "0.10"
digest = "0.10"
tokio = { workspace = true }

[lib]
path = "src/lib.rs"
