[package]
name = "sdkwork-prompts-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sdkwork-prompts-service-host = { path = "../sdkwork-prompts-service-host" }
sdkwork-intelligence-prompts-ai-contract = { path = "../sdkwork-intelligence-prompts-ai-contract" }
sdkwork-iam-web-adapter = { path = "../../../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-iam-context-service = { path = "../../../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork-database-ops-http = { path = "../../../sdkwork-database/crates/sdkwork-database-ops-http" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
sdkwork-web-bootstrap = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sdkwork-prompts-api-server"
path = "src/main.rs"

[[bin]]
name = "sdkwork-prompts-standalone-gateway"
path = "src/main.rs"
