[package]
name = "sdkwork-prompts-database-host"
version.workspace = true
edition.workspace = true
description = "SDKWork Prompts database lifecycle bootstrap."

[lib]
name = "sdkwork_prompts_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
sdkwork-utils-rust = { workspace = true }
