[package]
name = "sdkwork-prompts-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-prompts application HTTP plane."

[lib]
name = "sdkwork_prompts_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
sdkwork-prompts-service-host = { path = "../sdkwork-prompts-service-host" }
sdkwork-prompts-standalone-gateway = { path = "../sdkwork-prompts-standalone-gateway" }
