[package]
name = "sdkwork-prompts-web-context"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Shared WebRequestContext, response mapping, and IAM middleware for Prompts routes."

[lib]
name = "sdkwork_prompts_web_context"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
sdkwork-intelligence-prompts-ai-contract.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork-iam-context-service.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true
