[package]
name = "sdkwork-router-prompts-open-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
sdkwork-iam-web-adapter = { workspace = true }
sdkwork-web-axum.workspace = true
sdkwork-web-core.workspace = true
sdkwork-utils-rust.workspace = true
