[package]
name = "sdkwork-routes-prompts-app-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "SDKWork Prompts application API routes."

[lib]
name = "sdkwork_routes_prompts_app_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-intelligence-prompts-ai-contract.workspace = true
sdkwork-prompts-web-context.workspace = true
sdkwork-web-core.workspace = true
